crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__basic_component.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<Foo></Foo>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Foo"), _attrs, null, _parent))
}
