crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__component_slot_v_for_aliases_stay_local.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<Foo><div v-for=\"[dep, version] in deps\" :key=\"dep\">{{ dep }} {{ version }}</div></Foo>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Foo"), _attrs, {
    default: _withCtx((_, _push, _parent, _scopeId) => {
      if (_push) {
        _push(`<!--[-->`)
        _ssrRenderList(_ctx.deps, ([dep, version]) => {
          _push(`<div>${_ssrInterpolate(dep)} ${_ssrInterpolate(version)}</div>`)
        })
        _push(`<!--]-->`)
      } else {
        return [(_openBlock(true), _createBlock(_Fragment, null, _renderList(_ctx.deps, ([dep, version]) => { return _createElementVNode("div", { key: dep }, [_createTextVNode(_toDisplayString(dep)), _createTextVNode(" "), _createTextVNode(_toDisplayString(version))]) }), 128 /* KEYED_FRAGMENT */))]
      }
    }),
    _: 1
  }, _parent))
}
