crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__component_v_on_object_syntax_merges_handlers.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<Foo v-on=\"handlers\" :id=\"id\" />\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Foo"), _mergeProps(_mergeProps(_normalizeProps(_guardReactiveProps(_toHandlers(_ctx.handlers))), { id: _ctx.id }), _attrs), null, _parent))
}
