crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__component_v_show_merges_with_style_prop.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<MyComp :style=\"{ color }\" v-show=\"ok\" />\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("MyComp"), _mergeProps({ style: [{ color: _ctx.color }, ((_ctx.ok) ? null : { display: "none" })] }, _attrs), null, _parent))
}
